--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.6.0/Sortable.min.js"></script>
-        <script type="text/javascript" src="Column.js"></script>
-        <script type="text/javascript" src="Card.js"></script>
-        <script type="text/javascript" src="Board.js"></script>
-        <script type="text/javascript" src="App.js"></script>
-        <!-- <script src="js/script.js"></script> -->
+        <script type="text/javascript" src="js/Column.js"></script>
+        <script type="text/javascript" src="js/Card.js"></script>
+        <script type="text/javascript" src="js/Board.js"></script>
+        <script type="text/javascript" src="js/App.js"></script>
     </body>
 </html>
